# svgit

./: .gitignore  Cargo.toml  README.md  boundary_edges  collinear_edge  integration_test  test_merge  test_palette
.claude/: launch.json
bgremove/src/: lib.rs
bgremove/tests/: inference.rs
cmdapp/: Cargo.toml  pyproject.toml
cmdapp/src/: lib.rs
denoise/: Cargo.toml
denoise/src/: lib.rs
denoise/tests/: inference.rs
objseg/: Cargo.toml
objseg/src/: lib.rs
objseg/tests/: inference.rs
pipeline/: Cargo.toml
pipeline/examples/: comb_overflow.rs
pipeline/src/: color.rs  contour.rs  curvefit.rs  gradient.rs  lib.rs  quantize.rs  segment.rs  simplify.rs  svg.rs  trace.rs
scripts/: fetch-models.sh
service/: Cargo.toml
service/src/: main.rs
service/static/: index.html
superres/: Cargo.toml
superres/src/: lib.rs
superres/tests/: inference.rs
