[package]
name = "vtracer"
version = "0.6.12"
authors = ["Richard Tang <richardxue0328@gmail.com>"]
edition = "2021"
description = "A cmd app to convert images into vector graphics."
license = "MIT"
categories = ["graphics"]
keywords = ["svg", "computer-graphics"]

[dependencies]
clap = "2.33.3"
image = "0.23.10"
visioncortex = { version = "0.8.8" }
fastrand = { version = "2.3" }
pyo3 = { version = "0.19.0", optional = true }

[features]
python-binding = ["pyo3"]
wasm = ["fastrand/js"]

[lib]
name = "vtracer"
crate-type = ["rlib", "cdylib"]