[project]
name = "svgit"
version = "0.6.15"
description = "Python bindings for the Rust Svgit raster-to-vector library"
authors = [ { name = "Richard Tang",  email = "richardxue0328@gmail.com" } ]
readme = "vtracer/README.md"
requires-python = ">=3.7"
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[dependencies]
python = "^3.7"

[dev-dependencies]
maturin = "^1.2"

[build-system]
requires = ["maturin>=1.2,<2.0"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3/extension-module", "python-binding"]
compatibility = "manylinux2014"
include = ["LICENSE"]
