[package]
name = "svgit-objseg"
version = "0.1.0"
edition = "2021"
description = "Class-agnostic 'segment everything' (FastSAM / YOLOv8-seg) for svgit (Level 3 ML layer)."
license = "MIT"

[lib]
name = "svgit_objseg"

[dependencies]
# Shares the onnxruntime download with svgit-bgremove; kept out of svgit-pipeline.
ort = { version = "=2.0.0-rc.10", features = ["download-binaries"] }
image = "0.23.10"
